<resources>
    <string name="app_name">FirstPro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_not_matched">This password not matching</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_agreementRB">I Agree to the Terms and Conditions</string>

    <!-- Strings related to greet_add -->
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="first_number">Enter the first number</string>
    <string name="second_number">Enter the second number</string>
    <string name="info_FirstName">First Name</string>
    <string name="info_LastName">Last Name</string>
    <string name="info_Phone">Phone number</string>
    <string name="info_collegeName">College Name</string>
    <string name="info_studyField">Study Field</string>

    <!-- Navigation View-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_topView">Take a few minutes to finish the setup</string>

    <!-- Scan and Share Text -->
    <string name="scanShareFragment_textViewText">No Text</string>
    <string name="scanShareFragment_BtnText">Share Current Text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--New User Fragment-->
    <string name="fragmentNewUser_titleView">Create New Account</string>
    <string name="fragmentNewUser_emailView">Enter your email</string>
    <string name="fragmentNewUser_emailHint">email</string>
    <string name="fragmentNewUser_passView">Enter a password</string>
    <string name="fragmentNewUser_passHint">password</string>
    <string name="fragmentNewUser_confirmPassView">Enter the password again</string>
    <string name="fragmentNewUser_confirmPassHint">password again</string>
    <string name="fragmentNewUser_signUpBtn">Sign Up</string>

</resources>
