<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/fragmentLogin_logo"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:src="@drawable/ic_logo"
        android:scaleType="fitCenter"
        android:layout_marginTop="20sp"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/fragmentLogin_loginProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/fragmentLogin_scrollViewLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110sp">

        <LinearLayout
            android:id="@+id/fragmentLogin_linearLayoutLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/tranc_white_rectangle">

            <TextView
                android:id="@+id/fragmentLogin_welcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="Get Started Now"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/fragmentLogin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/rounded_white"
                android:drawableStart="@drawable/ic_user_icon"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="5sp"
                android:paddingStart="10sp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorLink="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/fragmentLogin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white"
                android:drawableStart="@drawable/ic_pass_icon"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5sp"
                android:paddingStart="10sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/fragmentLogin_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:checked="false"
                android:paddingLeft="5sp"
                android:text="@string/login_agreementRB"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <!--android:button="@drawable/radio_button"-->

            <Button
                android:id="@+id/fragmentLogin_loginBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="18sp"
                android:background="@drawable/login_button"/>

            <TextView
                android:id="@+id/fragmentLogin_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Sign up for free"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>