<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreetAdd"
    android:background="@drawable/greet_add_background">

    <TextView
        android:id="@+id/greetAdd_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:fontFamily="serif"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greetAdd_messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="Message:"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetAdd_textView" />

    <EditText
        android:id="@+id/greetAdd_messageEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#95ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greetAdd_messageTextView"
        app:layout_constraintTop_toBottomOf="@+id/greetAdd_textView" />

    <TextView
        android:id="@+id/greetAdd_firstNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="1st Number:"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetAdd_messageEditText" />

    <EditText
        android:id="@+id/greetAdd_firstNumEditText"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/first_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#95ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greetAdd_firstNumTextView"
        app:layout_constraintTop_toBottomOf="@+id/greetAdd_messageEditText" />

    <TextView
        android:id="@+id/greetAdd_secondNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="2nd Number:"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetAdd_firstNumTextView" />

    <EditText
        android:id="@+id/greetAdd_secondNumEditText"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/second_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#95ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greetAdd_secondNumTextView"
        app:layout_constraintTop_toBottomOf="@+id/greetAdd_firstNumEditText" />

    <Button
        android:id="@+id/greetAdd_sendBtn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32sp"
        android:background="@drawable/tab3_buttons"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>