<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".userinfotabs.RegistrationFragment"
    android:id="@+id/user_info_regFrag">

    <TextView
        android:id="@+id/regFrag_EnterInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regFrag_FNView"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="First Name:"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_EnterInfo" />

    <EditText
        android:id="@+id/regFrag_firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/info_FirstName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#95000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regFrag_FNView"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_EnterInfo" />

    <TextView
        android:id="@+id/regFrag_LNView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="Last Name:"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_FNView" />

    <EditText
        android:id="@+id/regFrag_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/info_LastName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#95000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regFrag_LNView"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_firstName" />


    <TextView
        android:id="@+id/regFrag_PhoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="Phone #:"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_LNView" />

    <EditText
        android:id="@+id/regFrag_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/info_Phone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#95000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regFrag_PhoneView"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_lastName" />

    <TextView
        android:id="@+id/regFrag_collegeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="College:"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_PhoneView" />

    <EditText
        android:id="@+id/regFrag_collegeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/info_collegeName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#95000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regFrag_collegeView"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_phoneNumber" />

    <TextView
        android:id="@+id/regFrag_studyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="Study Field:"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_collegeView" />

    <EditText
        android:id="@+id/regFrag_studyField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/info_studyField"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#95000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regFrag_studyView"
        app:layout_constraintTop_toBottomOf="@+id/regFrag_collegeName" />

    <Button
        android:id="@+id/regFrag_saveBtn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44sp"
        android:text="Save Info"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>